@@ -1,13 +1,17 @@
 
 version 0.4.1 (cvs)
 	
+	Todo
+	- Add attribute support to Aware Service
+	- Complete the File Transfer service
+	
 	Features
 	- Support sending the LoginCont message in response to a
 	LoginRedirect
 	- Support for multi-segment messages from NotesBuddy (fixes
 	problems with large MIME, text, and HTML messages)
 	
-	Buf Fixes
+	Bug Fixes
 	- Bug #1168421 crash when opening specific contacts
 	- Problem with NAB group members not being announced after the
 	initial group status update
